@@ -25,7 +25,7 @@ extern char	*CONFIG_SOURCE_IP;
 
 int	tcp_expect(const char *host, unsigned short port, const char *request,
 		const char *expect, const char *sendtoclose, int *value_int);
-int	CHECK_PORT(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
+int	NET_TCP_PORT(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
 int	CHECK_DNS(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
 int	CHECK_DNS_QUERY(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
 
